# dnsproxy

./: LICENSE  MANIFEST  Makefile.am  Makefile.in  README.in  README.md  bootstrap  configure.ac  daemon.c  dnsproxy.1.in  dnsproxy.8.in  dnsproxy.c  dnsproxy.conf  dnsproxy.h  hash.c  internal.c  log.c  parse.c  stats.c
.github/workflows/: build.yml
